--- a/faqs.html
+++ b/faqs.html
@@ -33,13 +33,13 @@
 				<nav class="navbar navbar-expand-lg navbar-dark animated fadeIn">
 						<a class="navbar-brand" href="home.html"><img id="logo" class="img-fluid" src="assets/images/home/icon.png"></a>
 
-						<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#headnav">
+						<button class="navbar-toggler btn btn-outline-danger" type="button" data-toggle="collapse" data-target="#headnav">
 							<span class="navbar-toggler-icon"></span>
 						</button>
 
 					<div id="headnav" class="navbar-collapse collapse">
 						<ul class="navbar-nav ml-auto">
-							<li class="nav-item"><a class="btn-font nav-link" href="home.html">Home</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="home.html">Home</a></li>
 
 							<li class="nav-item">
 								<li class="dropdown">
@@ -57,9 +57,9 @@
 								</li>
 							</li>
 
-							<li class="nav-item"><a class="btn-font nav-link" href="gallery.html">Gallery</a></li>
-							<li class="nav-item"><a class="btn-font nav-link" href="about.html">About</a></li>
-							<li class="nav-item active"><a class="btn-font nav-link" href="faqs.html">FAQs</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="gallery.html">Gallery</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="about.html">About</a></li>
+							<li class="tabs nav-item active"><a class="btn-font nav-link" href="faqs.html">FAQs</a></li>
 							
 						</ul>
 
@@ -82,14 +82,14 @@
 
 
 	
-	<div id="duwende" class="p-5">
+	<div id="duwende" class="p-0">
 		<h2 class="page-title text-center mb-5">FAQs</h2>
 
 		<div class="accordion" id="accordionExample">
 		  <div class="card">
-			    <div class="card-header" id="headingOne">
+			    <div class="card-header col-lg-12 col-md-12 col-sm-12" id="headingOne">
 			      <h5 class="mb-0">
-			        <button class="paragraph-title btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne">
+			        <button class="question btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne">
 			          What is wakwak?
 			        </button>
 			      </h5>
@@ -105,9 +105,9 @@
 		  </div><!-- question 1 -->
 
 		  <div class="card">
-			    <div class="card-header" id="headingTwo">
+			    <div class="card-header col-lg-12 col-md-12 col-sm-12" id="headingTwo">
 			      <h5 class="mb-0">
-			        <button class="paragraph-title btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+			        <button class="question btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
 			          Why it's called wakwak?
 			        </button>
 			      </h5>
@@ -124,9 +124,9 @@
 		  </div><!-- question 2 -->
 
 		  <div class="card">
-			    <div class="card-header" id="headingThree">
+			    <div class="card-header col-lg-12 col-md-12 col-sm-12" id="headingThree">
 			      <h5 class="mb-0">
-			        <button class="paragraph-title btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree">
+			        <button id="question3" class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree">
 			          What exactly is Philippine mythology?
 			        </button>
 			      </h5>
