--- a/home.html
+++ b/home.html
@@ -27,6 +27,7 @@
 
 
 	<div id="navihead" class="home container-fluid">
+
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12">
 				
@@ -39,7 +40,8 @@
 
 					<div id="headnav" class="navbar-collapse collapse">
 						<ul class="navbar-nav ml-auto">
-							<li class="nav-item active"><a class="btn-font nav-link" href="#">Home</a></li>
+
+							<li class="tabs nav-item active"><a class="btn-font nav-link" href="#">Home</a></li>
 
 							<li class="nav-item">
 								<li class="dropdown">
@@ -57,31 +59,34 @@
 								</li>
 							</li>
 
-							<li class="nav-item"><a class="btn-font nav-link" href="gallery.html">Gallery</a></li>
-							<li class="nav-item"><a class="btn-font nav-link" href="about.html">About</a></li>
-							<li class="nav-item"><a class="btn-font nav-link" href="faqs.html">FAQs</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="gallery.html">Gallery</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="about.html">About</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="faqs.html">FAQs</a></li>
 	
 						</ul>
 
 					</div><!-- headnav -->
+				</nav>	
 			</div><!-- col -->
+
 		</div><!-- row -->
+
 
 		<div id="title-home" class="row animated fadeIn text-center">
 			<div class="col-lg-12 col-md-12 col-sm-12">
 				<a id="hometitle" class="jumbotron bg-transparent" href="#">WakWak</a>
 			</div>
-		</div>
 
-		<div class="row animated fadeIn text-center">
-			<div id="arrowwdown" class="col-lg-12 col-md-12 col-sm-12">
-				<a href="#duwende"><i class="fas fa-angle-down fa-3x animated bounce"></i></a>
+			
+			<div id="arrowwdown" class="row animated fadeIn text-center">
+				<div class="col-lg-12 col-md-12 col-sm-12">
+					<a href="#duwende"><i class="fas fa-angle-down fa-3x animated bounce"></i></a>
+				</div>
 			</div>
 		</div>
+
 	</div><!-- main head container -->
 
-
-	
 
 
 
