--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
 					<div id="headnav" class="navbar-collapse collapse">
 						<ul class="navbar-nav ml-auto">
-							<li class="nav-item"><a class="btn-font nav-link" href="home.html">Home</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="home.html">Home</a></li>
 
 							<li class="nav-item">
 								<li class="dropdown">
@@ -57,9 +57,9 @@
 								</li>
 							</li>
 
-							<li class="nav-item"><a class="btn-font nav-link" href="gallery.html">Gallery</a></li>
-							<li class="nav-item active"><a class="btn-font nav-link" href="about.html">About</a></li>
-							<li class="nav-item"><a class="btn-font nav-link" href="faqs.html">FAQs</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="gallery.html">Gallery</a></li>
+							<li class="tabs nav-item active"><a class="btn-font nav-link" href="about.html">About</a></li>
+							<li class="tabs nav-item"><a class="btn-font nav-link" href="faqs.html">FAQs</a></li>
 		
 						</ul>
 
